# cubesolve

./: .dockerignore  .gitattributes  .gitignore  2026-01-11-this-session-is-being-continued-from-a-previous-co.txt  BRANCHES_NOT_IN_P314.md  COMMUNICATOR_PERFORMANCE_REPORT.md  COMMUNICATOR_S2_ALGORITHM.md  COMMUNICATOR_S2_ALGORITHM_DEEP.md  COMMUTATOR_MATHEMATICS.md  Dockerfile  GUI_TESTING.md  IMPLEMENTATION_SUMMARY.md  LINUX_README.md  MIGRATION_STATE_SUMMARY.md  PLAN-sliced-alg-hierarchy.md  PLAN.md  PROJECT_STRUCTURE_LEARNING.md  README-webgl.md  README.md  RESEARCH.md  S2_DERIVATION_RULE.md  S2_LOOKUP_TABLE_VALIDATED.md  SESSION_NOTES.md  STATE.md  TEST_RESULTS_REPORT.md  WEBGL-README.md  WEBGL-build-run.md  WEBGL-running.md  __readme_set_activate.txt  __todo.md  __todo.txt  __todo_gui_test_bug.md  _perf.txt  _readme_pip_commands  _requires.txt  _to_learn_others.md  algs.py  app_exceptions.py  app_state.py  arch.md  (+88 more)
src/: pyproject.toml
src/cube/: RUNNING.md  main_any_backend.py  main_console.py  main_console_new.py  main_g.py  main_headless.py  main_pyglet.py  main_pyglet2.py  main_tkinter.py  main_web.py  main_webgl.py  py.typed  version.py
src/cube/algs/: Alg.py  Algs.py  AnnotationAlg.py  DoubleLayerAlg.py  Inv.py  Mul.py  SimpleAlg.py  SliceAlg.py  __init__.py  _internal_utils.py  _parser.py  optimizer.py
src/cube/animation/: AnimationManager.py  animation_manager.py  win-animation.puml
src/cube/app/: AbstractApp.py  ApplicationAndViewState.py  ExceptionEvenCubeCornerSwap.py  ExceptionEvenCubeEdgeParity.py  ExceptionInternalSWError.py  ExceptionOpAborted.py  _app_tests.py  abstract_ap.py  app.py  app_exceptions.py  app_state.py
src/cube/application/: AbstractApp.py  Logger.py  PrefixedLogger.py  Scrambler.py  __init__.py  _app_tests.py  _config.py  app.py  config.py  config_impl.py  logger.md  state.py
src/cube/application/animation/: AnimationManager.py  AnimationText.py  __init__.py
src/cube/application/commands/: AnnWhat.py  DualAnnotation.py  DualOperator.py  OpAnnotation.py  Operator.py  __init__.py  op_annotation.py
src/cube/application/exceptions/: ExceptionAppExit.py  ExceptionRunStop.py  __init__.py  app_exceptions.py
src/cube/application/markers/: IMarkerFactory.py  IMarkerManager.py  MarkerFactory.py  MarkerManager.py  MarkerShape.py  NoopMarkerFactory.py  NoopMarkerManager.py  __init__.py  _complementary_colors.py  _marker_config.py  _marker_creator_protocol.py  _marker_creators.py  _marker_toolkit.py  _outlined_circle_marker.py  markers.md
src/cube/application/protocols/: AnimatableViewer.py  EventLoop.py  __init__.py
src/cube/config/: config.py  face_tracer_config.py
src/cube/domain/: __init__.py
src/cube/domain/algs/: Alg.py  Algs.py  AnimationAbleAlg.py  AnnotationAlg.py  DoubleLayerAlg.py  FaceAlg.py  FaceAlgBase.py  HeadingAlg.py  Inv.py  MarkerMeetAlg.py  MiddleSliceAlg.py  Mul.py  Scramble.py  SeqAlg.py  SimpleAlg.py  SliceAbleAlg.py  SliceAlg.py  SliceAlgBase.py  SlicedFaceAlg.py  SlicedSliceAlg.py  WholeCubeAlg.py  WideFaceAlg.py  WideLayerAlg.py  __init__.py  _internal_utils.py  _multiline_parser.py  _parser.py  optimizer.py
src/cube/domain/exceptions/: EvenCubeCornerSwapException.py  EvenCubeEdgeParityException.py  EvenCubeEdgeSwapParityException.py  GeometryError.py  InternalSWError.py  OpAborted.py  __init__.py
src/cube/domain/geometric/: CUBELAYOUT_INTERNAL_CUBE.md  FRotation.py  Face2FaceTranslator.py  GEOMETRY_LAYERS.md  HARDCODED_ANALYSIS.md  RotatedBlock.md  SESSION_NOTES.md  UNIT_WALKING_INFO.md  _CubeGeometric.py  _CubeLayout.py  _CubeLayoutGeometry.py  _SizedCubeLayout.py  __boaz-geoemtry-todo.md  __boaz-wpi-geometry-only.md  __boaz-wpi.md  __init__.py  _boaz_why_we_need_claude_patch_clockwize.md  _boaz_why_we_need_invert_current_index_patch.md  _slice_walking_path.py  _walking_info_summary.md  block.py  (+27 more)
src/cube/gui/: BackendRegistry.py  Command.py  GUIBackend.py  Modifiers.py  RenderingContext.py  __init__.py  command.py  context.py  factory.py  key_bindings.py  types.py
src/cube/main_console/: keys.py  main_c.py
src/cube/main_window/: AbstractWindow.py  AppWindowBase.py  Window.py  __init__.py  app_window_base.py  main_g_abstract.py  main_g_keyboard_input.py  main_g_mouse.py
src/cube/model/: Center.py  Color.py  ColorLong.py  Corner.py  Cube.py  CubeLayout.py  CubeQueries2.py  CubeSanity.py  Edge.py  Face.py  ModelHelper.py  Part.py  PartEdge.py  Slice.py  SuperElement.py  __init__.py  _elements.py  _part.py  _part_slice.py  _super_element.py  cube.py  cube_boy.py  cube_face.py  cube_queries2.py  cube_sanity.py  cube_slice.py
src/cube/operator/: AnnWhat.py  OpAnnotation.py  Operator.py  __init__.py  cube_operator.py  op_annotation.py
src/cube/presentation/: __init__.py
src/cube/resources/: __init__.py  version.txt
src/cube/solver/: SolverName.py  Solvers.py  __init__.py  solver.py
src/cube/testing/: TestRunner.py  __init__.py  test_runner.py  test_sequences.py
src/cube/utils/: Cache.py  Misc.py  OrderedSet.py  SSCode.py  __init__.py  config_protocol.py  debug.py  geometry.py  log_stream_buffer.py  logger.md  logger.py  logger_protocol.py  markers_config.py  prefixed_logger.py  service_provider.py  service_provider_for_tests.py  symbols.py  text_cube_viewer.py
src/cube/viewer/: GCubeViewer.py  GViewerExt.py  TextureData.py  _board.py  _cell.py  _faceboard.py  shapes.py  texture.py  viewer_g.py  viewer_g_ext.py  viewer_markers.py
(+1144 files in other folders)
